fix autoscroll and hide scrollbar.. add sound when message received or matched

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -54,6 +54,14 @@
   --tracking-hacker-micro: 1.5px; /*[cite: 1] */
 }
 
+* {
+    scrollbar-width: none; /* Firefox */
+}
+
+*::-webkit-scrollbar {
+    display: none; /* Chrome, Safari, Edge */
+}
+
 /* BASE APPLICATION OVERRIDES */
 @layer base {
   html, body {
